--- a/app/src/main/res/drawable/gradient_note_style_appl.xml
+++ b/app/src/main/res/drawable/gradient_note_style_appl.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="45"
-                android:startColor="#F4CFCF"
-                android:endColor="#D5B6B6"/>
+                android:startColor="#F8F9FF"
+                android:endColor="#DAE1F6"/>
         </shape>
     </item>
 </selector>
