--- a/app/src/main/res/drawable/gradient_note_style_chem.xml
+++ b/app/src/main/res/drawable/gradient_note_style_chem.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="45"
-                android:startColor="#F4F3CF"
-                android:endColor="#D4D5B6"/>
+                android:startColor="#F9FFF8"
+                android:endColor="#DBF6DA"/>
         </shape>
     </item>
 </selector>
