--- a/app/src/main/res/drawable/gradient_note_style_cloth.xml
+++ b/app/src/main/res/drawable/gradient_note_style_cloth.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="45"
-                android:startColor="#F4E2CF"
-                android:endColor="#D5C4B6"/>
+                android:startColor="#FDF8FF"
+                android:endColor="#EFDAF6"/>
         </shape>
     </item>
 </selector>
