--- a/app/src/main/res/drawable/gradient_note_style_neutral.xml
+++ b/app/src/main/res/drawable/gradient_note_style_neutral.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="45"
-                android:startColor="#F6F6F6"
-                android:endColor="#D3D3D3"/>
+                android:startColor="#FFFFFF"
+                android:endColor="#E4E4E4"/>
         </shape>
     </item>
 </selector>
